lib/src/compiler/tests/testdata/errors/59.out
error[E004]: wrong arguments
 --> line:4:21
  |
4 |     test_proto2.head() == "foo"
  |                     ^^ wrong arguments in this call
  |
  = note: accepted argument combinations:
          
          (integer)